<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created on 18-9-20 下午7:24.
  ~ Copyright © 2018 刘振林. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:drawableTop="@drawable/ic_launcher"
        android:text="@string/version"
        android:textSize="14.5sp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/copyright"
        android:textSize="14.5sp"
        android:textColor="@android:color/black"
        android:textAlignment="viewStart"
        android:gravity="start" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/btn_ok_aboutAppDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/selector_dialog_button"
            android:text="@string/ok"
            android:textSize="@dimen/dialog_button_text_size"
            android:textColor="@color/colorAccent" />
    </FrameLayout>
</LinearLayout>
