<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/bt_cancel_renameVideoListItemDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/cancel"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/color_selector_color_accent"
            android:includeFontPadding="false" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/rename"
            android:textSize="@dimen/title_text_size"
            android:textColor="@android:color/black"
            android:includeFontPadding="false" />

        <TextView
            android:id="@+id/bt_complete_renameVideoListItemDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/complete"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/color_selector_color_accent"
            tools:ignore="RelativeOverlap"
            android:includeFontPadding="false" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/image_videoListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_default_image"
        android:contentDescription="@string/videoThumbnail" />

    <EditText
        android:id="@+id/editor_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:hint="新名称"
        android:textSize="@dimen/primary_text_size"
        android:singleLine="true"
        android:textAlignment="center"
        android:gravity="center"
        tools:ignore="HardcodedText" />
</LinearLayout>
